<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Welcome"
        android:padding="10dp"

        >

        <TextView
            android:id="@+id/tv_welcome_welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_shoe_store"
            style="@style/Header"
            />

        <TextView
            android:id="@+id/tv_welcome_clickHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome_welcomeMessage"
            android:text="@string/click_the_button_to_read_introductions"
            style="@style/info"
            />

        <Button
            android:id="@+id/btn_welcome_navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            android:layout_below="@+id/tv_welcome_clickHere"
            style="@style/buttonStyle"
            />


    </RelativeLayout>

</layout>