<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ShoeDetail"
        android:layout_margin="4dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_name"
            android:id="@+id/til_shoeDetail_name"
            >
            <EditText
                android:id="@+id/ed_shoeDetail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_size"
            android:id="@+id/til_shoeDetail_size"
            android:layout_below="@+id/til_shoeDetail_name"
            >
            <EditText
                android:id="@+id/ed_shoeDetail_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_company"
            android:id="@+id/til_shoeDetail_company"
            android:layout_below="@+id/til_shoeDetail_size"
            >
            <EditText
                android:id="@+id/ed_shoeDetail_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_description"
            android:id="@+id/til_shoeDetail_description"
            android:layout_below="@+id/til_shoeDetail_company"
            >
            <EditText
                android:id="@+id/ed_shoeDetail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:id="@+id/btn_shoeDetail_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorAccent"
                />

            <Button
                android:id="@+id/btn_shoeDetail_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_shoe"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>

    </RelativeLayout>



</layout>